@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-gnome-meta-2.32-r2 (02 Dec 2011)
+
+  02 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-gnome-meta-2.32-r1.ebuild, +cl-gnome-meta-2.32-r2.ebuild:
+  remove app-admin/pessulus, gnome-extra/bug-buddy
+
 *cl-gnome-meta-2.32-r1 (22 Nov 2011)
 
   22 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
